# memory

./: .gitignore  CMakeLists.txt
memory/: CMakeLists.txt  main.cpp
third/: CMakeLists.txt
third/exiv2/: CMakeLists.txt
third/exiv2/include/exiv2/: exv_conf.h
third/exiv2/lib/linux-x86_64/: libexiv2.so.1.0.0.9
third/exiv2/lib/macOS-arm64/: libexiv2.1.0.0.9.dylib
third/exiv2/lib/macOS-x86_64/: libexiv2.0.dylib  libexiv2.1.0.0.9.dylib  libexiv2.dylib
third/exiv2/lib/win-x86_64/: exiv2.lib
